Sun Jan  4 16:43:32 CET 2009 Guido Günther <agx@sigxcpu.org>

	add "expiring" tray icon
	* icons/krb5-expiring-ticket.png: new icon
	* icons/Makefile.am (smallicon_DATA): add new icon
	* src/krb5-auth-applet.[ch] (ka_icons): new enum, new icon
	  (ka_update_status): use ka_icons
	  (ka_create_applet): call gtk_window_set_default_icon_name
	* src/krb5-auth-dialog.c (main): don't call
	  gtk_window_set_default_icon_name

Sun Jan  4 16:37:35 CET 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-applet.c (ka_update_status): don't show a tooltip
	about ticket expiry if ticket is renewable

Sun Jan  4 16:28:35 CET 2009 Guido Günther <agx@sigxcpu.org>

	pkinit support
	* README: document pkinit gconf keys
	* configure.ac: check for heimdal's pkinit support
	* krb5-auth-applet.h (Krb5AuthApplet): add pk_userid
	* krb5-auth-dialog.c (ka_krb5_cc_clear_mcred): new function
	  (set_options_from_creds): call
	  krb5_get_init_creds_opt_set_default_flags
	  (ka_auth_pkinit): new function
	  (grab_credentials): call ka_auth_pkinit
	  (ka_renew_credentials); simplify
	  (ka_get_tgt_from_ccache): likewise
	* krb5-auth-gconf.c (ka_gconf_set_pk_userid): new function

Sun Jan  4 16:21:20 CET 2009 Guido Günther <agx@sigxcpu.org>

	use get_error_message() when possible
	* configure.ac: check for krb5_get_error_message
	* src/krb5-auth-dialog.c (get_error_message): new function
	  (ka_error_dialog): check for KRB5_LIBOS_PWDINTR

Sun Jan  4 16:18:19 CET 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb-auth-dialog.[ch]: separate ticket renewal and interactive
	  ticket acquisition

Sun Jan  4 16:15:57 CET 2009 Guido Günther <agx@sigxcpu.org>

	* src/krbt-auth-{applet,dialog}.c don't popup the dialog if we have a
	  tray icon

Sun Jan  4 14:50:59 CET 2009 Guido Günther <agx@sigxcpu.org>

	use GtkSecureEntry instead of GtkEntry for the password entry
	* src/Makefile.am (AM_CPPFLAGS): add secmem/, gtksecentry/ to include
	  path